# huron_centroidal

./: .gitignore  CMakeLists.txt  LISCENSE  README.md  huron_centroidal.py  huron_centroidal_v2.py  huron_centroidal_v3.py  huron_centroidal_v4.py  huron_full.py  main.py  set_initial_joint.py  solver.out  stage1.py  test.py  test2.py  test_huron_centroidal.py
acrobatics/: CMakeLists.txt
acrobatics/contacts/: LeggedBody.h
acrobatics/include/Constraints/: CustomConstraint.h
acrobatics/include/Model/: ContactSequence.h  EndEffector.h  EnvironmentSurfaces.h  LeggedBody.h
acrobatics/include/Variables/: Constraint.h  KnotSegment.h  Objective.h  PseudospectralSegment.h  States.h  Trajectory.h  TrajectoryGeneration.h  TrajectoryOpt.h
acrobatics/robot/: ContactValue.h
acrobatics/src/: test.cpp
acrobatics/src/Model/: ContactSequence.cpp  EnvironmentSurfaces.cpp  LeggedBody.cpp
acrobatics/src/Variables/: Constraint.cpp  KnotSegment.cpp  PseudospectralSegment.cpp  States.cpp  Trajectory.cpp  TrajectoryGeneration.cc  TrajectoryGeneration.h  TrajectoryOpt.cpp
acrobatics/test/: test.cpp  test_setup.cc  traj_test.cpp
acrobatics/trajopt/include/: KnotSegment.h
acrobatics/trajopt/src/: KnotSegment.cc
docs/diagrams/src/: architecture_overview.wsd
entity/include/: ContactSequence.h  EndEffector.h
entity/src/: LeggedBody.cpp
install-test/: CMakeLists.txt  casadi_demo.cpp  casadi_demo2.cpp
installation_test/: CMakeLists.txt
launch/: gazebo.launch  huron_rviz.launch  spawn.launch
pin_tst/: package.xml
python/: WBC_test.py  huron_centroidal_v4.py  quad_prog.py  quadratic_wbc.py  set_initial_joint.py  stage1.py  test.py  test2.py  test3.py  test_huron_centroidal.py
python/trajopt/: centroidal_traj_opt.py
src/contacts/: contact_sequence.py  end_effector.py  phase.py
src/meshcat_viewer_wrapper/: tests.py
src/trajopt/: centroidal_traj_opt.py  parameters.py  peudospectral_collocation.py
test-install/: casadi_demo.cpp  casadi_demo2.cpp
urdf/: huron.urdf  huron_cheat.urdf
worlds/: default.world  multiview.world
xacro/: huron.xacro  huron_cheat.xacro  huron_visuals.xacro
